Connected databse and added user schema , created signup controller

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon index.js"
   },
-  "author": "",
+  "type": "module",
+  "author": "Shreya Sheth",
   "license": "ISC",
   "description": "",
   "dependencies": {
