--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,12 @@
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
     "formik": "^2.4.6",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1",
     "react-spinners": "^0.17.0",
